[gd_scene load_steps=10 format=3 uid="uid://ccrhr53h8iyim"]

[ext_resource type="Script" path="res://Scenes/game_area.gd" id="1_iaiwh"]
[ext_resource type="PackedScene" uid="uid://c33sfflw13k51" path="res://Scenes/neural_car_manager.tscn" id="1_jkvqb"]
[ext_resource type="PackedScene" uid="uid://51yasc5hk4v6" path="res://Scenes/track_2.tscn" id="2_6sj2g"]
[ext_resource type="PackedScene" uid="uid://bo3ui0wlk1dqt" path="res://components/camera_manager.tscn" id="3_elaeq"]
[ext_resource type="Script" path="res://components/neural_api_client.gd" id="3_mf48n"]
[ext_resource type="PackedScene" uid="uid://bji248xsn4q3q" path="res://Scenes/UI/graph.tscn" id="3_q1c5e"]
[ext_resource type="Script" path="res://components/network_layout_generator.gd" id="5_eies5"]
[ext_resource type="Script" path="res://components/console_io_handler.gd" id="7_lq4ur"]
[ext_resource type="Script" path="res://components/server_io_handler.gd" id="8_xv0p0"]

[node name="GameArea" type="Node2D"]
script = ExtResource("1_iaiwh")
track_scene = ExtResource("2_6sj2g")

[node name="CameraManager" parent="." instance=ExtResource("3_elaeq")]

[node name="NeuralAPIClient" type="Node" parent="." node_paths=PackedStringArray("io_handler")]
script = ExtResource("3_mf48n")
io_handler = NodePath("ConsoleIOHandler")

[node name="NeuralCarManager" parent="NeuralAPIClient" node_paths=PackedStringArray("api_client") instance=ExtResource("1_jkvqb")]
load_saved_networks = true
api_client = NodePath("..")
num_networks = 200
parent_selection = 4

[node name="NetworkLayoutGenerator" type="Node" parent="NeuralAPIClient"]
script = ExtResource("5_eies5")
num_inputs = 17
num_outputs = 4
hidden_layer_sizes = Array[int]([28, 14])
activation_functions = Array[int]([0, 1, 1, 0])
input_normalizers = Array[int]([1, 0, 0, 0])

[node name="ConsoleIOHandler" type="Node" parent="NeuralAPIClient"]
process_thread_group = 2
process_thread_group_order = 0
process_thread_messages = 0
script = ExtResource("7_lq4ur")
autostart = true

[node name="ServerIOHandler" type="Node" parent="NeuralAPIClient"]
process_thread_group = 2
process_thread_group_order = 0
process_thread_messages = 0
script = ExtResource("8_xv0p0")
host_address = "localhost"
host_port = 3050

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GenLabel" type="Label" parent="CanvasLayer"]
offset_right = 106.0
offset_bottom = 25.0
text = "Generation: --"

[node name="BatchLabel" type="Label" parent="CanvasLayer"]
offset_top = 34.0
offset_right = 157.0
offset_bottom = 57.0
text = "Batch Progress: --"

[node name="TimerLabel" type="Label" parent="CanvasLayer"]
offset_top = 69.0
offset_right = 140.0
offset_bottom = 97.0
text = "Time remaining: --"

[node name="Graph" parent="CanvasLayer" instance=ExtResource("3_q1c5e")]
anchors_preset = -1
anchor_left = 0.715278
anchor_top = 0.0138889
anchor_right = 0.996528
anchor_bottom = 0.388889
resolution = 1000
metadata/_edit_use_anchors_ = true

[node name="SaveButton" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.00607639
anchor_top = 0.944444
anchor_right = 0.0746528
anchor_bottom = 0.992284
offset_bottom = -1.0
text = "Save"
metadata/_edit_use_anchors_ = true

[connection signal="child_entered_tree" from="NeuralAPIClient" to="NeuralAPIClient" method="_on_child_entered_tree"]
[connection signal="generation_countown_updatad" from="NeuralAPIClient/NeuralCarManager" to="." method="_on_generation_countown_updatad"]
[connection signal="new_generation" from="NeuralAPIClient/NeuralCarManager" to="." method="_on_car_manager_new_generation"]
[connection signal="reset" from="NeuralAPIClient/NeuralCarManager" to="." method="_on_neural_car_manager_reset"]
[connection signal="pressed" from="CanvasLayer/SaveButton" to="." method="_on_save_button_pressed"]
